--- a/app/src/main/res/layout/business_image_item.xml
+++ b/app/src/main/res/layout/business_image_item.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/imgImageView"
         android:layout_width="match_parent"
+        tools:layout_width="120dp"
         android:layout_height="match_parent"
+        tools:layout_height="120dp"
         android:src="@drawable/person_placeholder"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/removeButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="right"
         android:background="@drawable/circle_shape"
         android:padding="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="4dp"
         app:backgroundTint="#00A9FD"
+        android:tint="#fff"
         app:srcCompat="@drawable/ic_baseline_close_24"
         tools:ignore="RtlHardcoded" />
 
