--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,6 +13,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <TextView
+        android:id="@+id/typeUserTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="ADMIN"
+        android:textAllCaps="true"
+        android:textSize="14sp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/logInButton"
         android:layout_width="wrap_content"
@@ -52,7 +63,7 @@
         app:layout_constraintTop_toTopOf="@id/profileImageView"
         app:layout_constraintBottom_toTopOf="@id/emailTextView"
         app:layout_constraintVertical_chainStyle="spread"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textColor="#fff"/>
 
     <TextView
@@ -65,7 +76,7 @@
         app:layout_constraintStart_toEndOf="@id/profileImageView"
         app:layout_constraintTop_toBottomOf="@id/fullnameTextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textSize="15sp"
+        android:textSize="14sp"
         android:textColor="#fff"
         tools:text="example@mail.com"/>
 
