--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -47,14 +47,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
-                android:src="@drawable/ic_camera_24"
+                app:srcCompat="@drawable/ic_camera_24"
                 app:elevation="0dp"
                 app:fabSize="mini" />
         </FrameLayout>
 
         <TextView
             android:id="@+id/fullnameTextView"
-            style="@style/CustomForm.Label"
+            style="@style/CustomFormLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nombre completo:"
@@ -63,7 +63,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/fullnameEditText"
-            style="@style/CustomForm.Input"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:hint="Escribe tu nombre completo"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
 
         <TextView
             android:id="@+id/emailTextView"
-            style="@style/CustomForm.Label"
+            style="@style/CustomFormLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Correo electronico:"
@@ -81,7 +81,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/emailEditText"
-            style="@style/CustomForm.Input"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:hint="Escribe tu correo electronico"
             android:inputType="textEmailAddress"
@@ -91,7 +91,7 @@
 
         <TextView
             android:id="@+id/passwordTextView"
-            style="@style/CustomForm.Label"
+            style="@style/CustomFormLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Contraseña:"
@@ -100,7 +100,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordEditText"
-            style="@style/CustomForm.Input"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:hint="Escribe tu contraseña"
             android:inputType="textPassword"
@@ -110,7 +110,7 @@
 
         <TextView
             android:id="@+id/passwordRepeatTextView"
-            style="@style/CustomForm.Label"
+            style="@style/CustomFormLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Confirmar contraseña:"
@@ -119,7 +119,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordRepeatEditText"
-            style="@style/CustomForm.Input"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:hint="Confirma tu contraseña"
             android:inputType="textPassword"
@@ -130,37 +130,18 @@
 
         <TextView
             android:id="@+id/phoneTextView"
-            style="@style/CustomForm.Label"
+            style="@style/CustomFormLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Celular:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/passwordRepeatEditText" />
 
-
-        <!--        android:background="@android:drawable/editbox_background"-->
-
-        <!--        <androidx.appcompat.widget.AppCompatSpinner-->
-        <!--            android:id="@+id/countryPhoneCodeSpinner"-->
-        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
-        <!--            android:layout_width="0dp"-->
-        <!--            android:layout_height="@dimen/input_height"-->
-        <!--            android:layout_marginTop="4dp"-->
-        <!--            android:textSize="@dimen/input_font_size"-->
-        <!--            android:background="@drawable/background_bordered"-->
-        <!--            app:layout_constraintEnd_toStartOf="@id/phoneNumberEditText"-->
-        <!--            app:layout_constraintHorizontal_weight="1"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/phoneTextView" />-->
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/countryPhoneCodeView"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="@dimen/input_height"
             android:layout_marginTop="4dp"
-            android:background="@drawable/background_bordered"
-            android:textSize="@dimen/input_font_size"
             app:layout_constraintEnd_toStartOf="@id/phoneNumberEditText"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -190,7 +171,7 @@
                 android:id="@+id/arrowImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_down"
+                app:srcCompat="@drawable/ic_arrow_down"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/phoneCodeTextView"
@@ -201,7 +182,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/phoneNumberEditText"
-            style="@style/CustomForm.Input"
+            android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_marginLeft="16dp"
             android:hint="Escribe tu número de celular"
