--- a/app/src/main/res/layout/fragment_moderators.xml
+++ b/app/src/main/res/layout/fragment_moderators.xml
@@ -3,11 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.moderators.ModeratorsFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/moderatorsRecyclerView"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/moderatorRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/moderatorsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addModeratorButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        tools:ignore="RtlHardcoded" />
 
 </FrameLayout>
