--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,11 +23,11 @@
 
     <style name="Theme.BizNearby.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="CustomForm">
+<!--    <style name="CustomForm" parent="Theme.BizNearby">-->
 
-    </style>
+<!--    </style>-->
 
-    <style name="CustomForm.Input">
+    <style name="CustomForm.Input" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="android:layout_height">@dimen/input_height</item>
         <item name="android:minHeight">@dimen/input_height</item>
         <item name="android:textSize">@dimen/input_font_size</item>
@@ -39,7 +39,7 @@
         <item name="android:background">@drawable/background_bordered</item>
     </style>
 
-    <style name="CustomForm.Label">
+    <style name="CustomFormLabel">
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:textColor">#404040</item>
     </style>
