--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BizNearby" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BizNearby" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#2296F3</item>
         <item name="colorPrimaryVariant">#1465C0</item>
@@ -22,10 +22,6 @@
     <style name="Theme.BizNearby.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.BizNearby.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-<!--    <style name="CustomForm" parent="Theme.BizNearby">-->
-
-<!--    </style>-->
 
     <style name="CustomForm.Input" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="android:layout_height">@dimen/input_height</item>
