--- a/app/src/main/res/layout/fragment_explore_result_item.xml
+++ b/app/src/main/res/layout/fragment_explore_result_item.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?selectableItemBackground"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+    android:paddingRight="16dp"
+    android:paddingLeft="16dp">
 
     <TextView
         android:id="@+id/titleTextView"
