--- a/app/src/main/res/layout/activity_my_businesses.xml
+++ b/app/src/main/res/layout/activity_my_businesses.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.moderators.ModeratorsFragment">
+    tools:context=".ui.my_businesses.MyBusinessesActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/moderatorRefreshLayout"
+        android:id="@+id/myBusinessesRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/moderatorsRecyclerView"
+            android:id="@+id/myBusinessesRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addModeratorButton"
+        android:id="@+id/addBusinessButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom|right"
         app:srcCompat="@drawable/ic_baseline_add_24"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
 </FrameLayout>
