--- a/app/src/main/res/layout/activity_pick_city.xml
+++ b/app/src/main/res/layout/activity_pick_city.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:dropDownHeight="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Buscar ciudad..."
         app:layout_constraintBottom_toTopOf="@id/citiesRecyclerView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
