--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -16,33 +16,56 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_marginTop="90dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/queryEditText"
-            android:layout_width="match_parent"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/viewInMap"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_input_corner"
-            android:elevation="4dp"
-            android:hint="Busqueda..."
-            android:padding="10dp"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            app:backgroundTint="#fff"
+            android:drawableLeft="@drawable/ic_baseline_map_24"
+            android:textAllCaps="false"
             android:visibility="gone"
             tools:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Ver en mapa"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/closeResultsButton"
+            app:layout_constraintHorizontal_weight="4"
+            tools:ignore="RtlHardcoded" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/closeResultsButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Limpiar"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:textAllCaps="false"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:drawableRight="@drawable/ic_baseline_close_24"
+            app:drawableTint="?colorPrimary"
+            android:layout_marginRight="8dp"
+            app:backgroundTint="#fff"
+            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintStart_toEndOf="@id/viewInMap"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/resultsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:background="#fff"
-            android:elevation="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@id/viewInMap"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/queryEditText" />
-
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="#fff"
+            android:elevation="4dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
