--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_explore"
-            android:icon="@drawable/ic_explore_24"
-            android:title="@string/menu_explore" />
+    <group android:checkableBehavior="none">
         <item
             android:id="@+id/nav_add_business"
             android:icon="@drawable/ic_baseline_add_business_24"
