--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_log_out"
-        android:orderInCategory="100"
-        android:title="@string/action_log_out"
-        app:showAsAction="never" />
+        android:id="@+id/range_spinner"
+        android:title="Rango:"
+        app:actionViewClass="android.widget.Spinner"
+        app:showAsAction="always" />
+
 </menu>
