--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="input_height">44dp</dimen>
     <dimen name="input_font_size">15sp</dimen>
+    <dimen name="toolbar_height">58dp</dimen>
 </resources>
