--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,6 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">#fff</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -19,7 +18,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.BizNearby.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.BizNearby.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light">
+
+    </style>
 
     <style name="Theme.BizNearby.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
