--- a/app/src/main/res/layout/fragment_basic_info.xml
+++ b/app/src/main/res/layout/fragment_basic_info.xml
@@ -13,14 +13,24 @@
         android:padding="@dimen/activity_horizontal_margin"
         tools:context=".ui.add_business.AddBusinessFragment">
 
+        <TextView
+            android:id="@+id/basicInfoTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Subtitle"
+            android:text="Información basica"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
         <ImageView
             android:id="@+id/bannerImageView"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:background="#03A9F4"
+            android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/basicInfoTextView"/>
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameEditText"
