--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -15,7 +15,8 @@
             android:id="@+id/scheduleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Horarios:"
+            android:text="Horarios"
+            style="@style/Subtitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
