--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,4 +40,11 @@
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:textColor">#404040</item>
     </style>
+
+    <style name="Subtitle">
+        <item name="android:textColor">#404040</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAppearance">@style/TextAppearance.MaterialComponents.Subtitle1
+        </item>
+    </style>
 </resources>
