--- a/app/src/main/res/layout/activity_add_business.xml
+++ b/app/src/main/res/layout/activity_add_business.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:drawableLeft="@drawable/ic_baseline_keyboard_arrow_left_24"
+            app:drawableLeftCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
             app:drawableTint="?colorOnPrimary"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:text="Atras"
@@ -84,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
+            app:drawableRightCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
             app:drawableTint="?colorOnPrimary"
             android:text="Siguiente"
             android:textColor="?colorOnPrimary"
