--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -16,7 +16,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp">
+        android:layout_marginTop="82dp">
+
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/viewInMap"
@@ -24,15 +38,15 @@
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             app:backgroundTint="#fff"
-            android:drawableLeft="@drawable/ic_baseline_map_24"
+            app:drawableLeftCompat="@drawable/ic_baseline_map_24"
             android:textAllCaps="false"
             android:visibility="gone"
             tools:visibility="visible"
             android:text="Ver en mapa"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="8dp"
+            app:layout_constraintTop_toBottomOf="@id/progressBar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/closeResultsButton"
             app:layout_constraintHorizontal_weight="4"
             tools:ignore="RtlHardcoded" />
@@ -46,13 +60,13 @@
             android:textAllCaps="false"
             android:visibility="gone"
             tools:visibility="visible"
-            android:drawableRight="@drawable/ic_baseline_close_24"
+            app:drawableRightCompat="@drawable/ic_baseline_close_24"
             app:drawableTint="?colorPrimary"
             android:layout_marginRight="8dp"
             app:backgroundTint="#fff"
             app:layout_constraintHorizontal_weight="2"
             app:layout_constraintStart_toEndOf="@id/viewInMap"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/progressBar"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
